[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/MiniGames/xbutton/xbuttonnormal.png" type="Texture" id=1]
[ext_resource path="res://Images/MiniGames/ArcadeBg.png" type="Texture" id=2]
[ext_resource path="res://Images/MiniGames/xbutton/xbuttonpressed.png" type="Texture" id=3]
[ext_resource path="res://Images/MiniGames/xbutton/clickmask.png" type="BitMap" id=4]
[ext_resource path="res://Scripts/MiniGame.gd" type="Script" id=5]

[node name="MiniGame" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ArcadeBg" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0.329412, 0.27451, 0.223529, 1 )
texture = ExtResource( 2 )
centered = false

[node name="ExitButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 1574.0
margin_top = 871.0
margin_right = 1778.0
margin_bottom = 1075.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_click_mask = ExtResource( 4 )
expand = true

[node name="PosTween" type="Tween" parent="."]

[node name="ScaleTween" type="Tween" parent="."]

[connection signal="button_up" from="CanvasLayer/ExitButton" to="." method="_on_ExitButton_button_up"]
[connection signal="tween_all_completed" from="ScaleTween" to="." method="_on_ScaleTween_tween_all_completed"]
